# WordleArchive

./: CMakeLists.txt  CMakePresets.json  README.md
WordleArchive/: CMakeLists.txt  WordleArchive.cpp  WordleArchive.h  cli_main.cpp  cli_main.h  color.cpp  color.h  gui.h  gui_config.h  gui_main.cpp  gui_main.h  main.cpp  strtoupper.cpp  strtoupper.h  word_dict.cpp  word_dict.h  word_list.cpp  word_list.h  wordle_statistics.cpp  wordle_statistics.h
WordleArchive/files/: generate_new_wordles.py  new_word_list.txt  update_word_list.cpp  update_word_list.lst  update_word_list.out  word_list.txt  wordles.txt
